SAKIII-5989 - BB: Alignment issue in People search list https://jira.sakaiproject.org/browse/SAKIII-5989

--- a/dev/css/sakai/sakai.base.css
+++ b/dev/css/sakai/sakai.base.css
@@ -1049,7 +1049,7 @@ a:hover {
 	padding: 7px 0;
 	width: 200px;
 }
-.s3d-hidden, .i18nable {
+.i18nable {
 	display: none;
 }
 .s3d-bold {
@@ -2460,9 +2460,6 @@ ul li.s3d-list-item:hover {
 	float: left;
 	height: 25px;
 	width: 17px;
-}
-.sakai_addtocontacts_overlay.hidden {
-    visibility: hidden;
 }
 .s3d-search-result-content .searchcontent_result_plus, .s3d-search-result-person .searchpeople_result_plus, .s3d-search-result-group .searchgroups_result_plus {
 	color: #e4e4e4;
